k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lif-system
  labels:
    name: lif-system
