k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lif-gateway
  namespace: lif-system
  labels:
    app: lif-app
    service: gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: gateway
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-finance
  namespace: lif-system
  labels:
    app: lif-app
    service: finance
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: finance
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-stock
  namespace: lif-system
  labels:
    app: lif-app
    service: stock
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: stock
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-esg
  namespace: lif-system
  labels:
    app: lif-app
    service: esg
spec:
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
    name: esg
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-ratio
  namespace: lif-system
  labels:
    app: lif-app
    service: ratio
spec:
  type: ClusterIP
  ports:
  - port: 8003
    targetPort: 8003
    protocol: TCP
    name: ratio
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-news
  namespace: lif-system
  labels:
    app: lif-app
    service: news
spec:
  type: ClusterIP
  ports:
  - port: 8004
    targetPort: 8004
    protocol: TCP
    name: news
  selector:
    app: lif-app

---
apiVersion: v1
kind: Service
metadata:
  name: lif-pdf
  namespace: lif-system
  labels:
    app: lif-app
    service: pdf
spec:
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8005
    protocol: TCP
    name: pdf
  selector:
    app: lif-app
